--- a/action.yml
+++ b/action.yml
@@ -91,4 +91,5 @@ runs:
     - ${{ inputs.enforce_checks }}
     - ${{ inputs.custom_policies_path }}
     - ${{ inputs.custom_policies_clear }}
-    - --junit-xml report.xml
+    - --junit-xml
+    - report.xml
